# cosmic-python

./: Dockerfile  README.md  app.py  config.py  conftest.py  docker-compose.yml  flask_app.py  model.py  orm.py  pyproject.toml  repository.py  requirements.txt  test_allocates.py  test_api.py  test_batches.py  test_orm.py  test_repository.py
adapters/: orm.py
core/: models.py  repository.py
src/allocation/: bootstrap.py  config.py  views.py
src/allocation/adapters/: notifications.py  orm.py  redis_eventpublisher.py  repository.py
src/allocation/domain/: commands.py  events.py  model.py
src/allocation/entrypoints/: flask_app.py  redis_eventconsumer.py
src/allocation/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py  test_allocates.py  test_batches.py  test_orm.py  test_repository.py
tests/e2e/: api_client.py  test_api.py  test_external_events.py
tests/integration/: test_email.py  test_orm.py  test_repository.py  test_uow.py  test_views.py
tests/unit/: test_allocates.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
