[tool.poetry]
name = "cosmic-python"
version = "0.1.0"
description = ""
authors = ["amazingguni <amazingguni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.17"
Flask = "^2.0.1"
requests = "^2.25.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.8.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
